# new-project

./: .gitignore  README.md  catalog_manager.py  edinet_engine.py  history_engine.py  main.py  master_merger.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: daily_extract.yml
data/2024/: 2024_金属製品.db
