[project]
name = "Integrated-Disclosure-Data-Lakehouse"
version = "2.0.0"
description = "Comprehensive disclosure data pipeline for Japan market"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "huggingface_hub",
    "requests",
    "pydantic",
    "loguru",
]

[tool.ruff]
# 除外設定: 外部ライブラリ(サブモジュール)や解析用ノートブックを除外
exclude = [
    "edinet_xbrl_prep",
    "*.ipynb",
]

# 全般設定
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# ルールの設定 (E: Error, F: Pyflakes, I: isort, B: flake8-bugbear)
select = ["E", "F", "I", "B"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# フォーマット設定
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
